<resources>
    <string name="app_name">Buzzin Thru Tech</string>
    <string name="title_activity_main">Buzzin Thru Tech</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Buzzin Thru Tech</string>
    <string name="second_fragment_label">Configuration Screen</string>
    <string name="third_fragment_label">Game Screen</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="previous">Continue</string>

    <string name="hello_first_fragment">Welcome to Buzzin Thru Tech</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="easyBox1">Easy</string>
    <string name="mediumBox2">Medium</string>
    <string name="hardBox3">Hard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="next">Next</string>
</resources>