<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInputScreen"
    tools:layout_editor_absoluteX="6dp"
    tools:layout_editor_absoluteY="-88dp">

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_back" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_inputname"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imagebutton_cabrera"
        android:layout_width="108dp"
        android:layout_height="95dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/cabrera"
        app:layout_constraintBottom_toTopOf="@+id/empty"
        app:layout_constraintEnd_toStartOf="@+id/imagebutton_cs"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imagebutton_buzz" />

    <ImageButton
        android:id="@+id/imagebutton_buzz"
        android:layout_width="108dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/buzz"
        app:layout_constraintBottom_toTopOf="@+id/empty"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_choosecharacter"
        android:layout_width="262dp"
        android:layout_height="57dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="16dp"
        android:text="Choose Character"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imagebutton_buzz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imagebutton_cs"
        android:layout_width="108dp"
        android:layout_height="95dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/stinkycskid"
        app:layout_constraintBottom_toTopOf="@+id/empty"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="192dp"
        android:layout_height="141dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="86dp"
        app:layout_constraintBottom_toTopOf="@+id/text_choosecharacter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:text="@string/easyBox1"
            tools:layout_editor_absoluteX="251dp"
            tools:layout_editor_absoluteY="132dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:text="@string/mediumBox2"
            tools:layout_editor_absoluteX="251dp"
            tools:layout_editor_absoluteY="195dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="161dp"
            android:layout_height="48dp"
            android:text="@string/hardBox3"
            tools:layout_editor_absoluteX="251dp"
            tools:layout_editor_absoluteY="258dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_inputname"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="19dp"
        android:text="Name:"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_choosedifficulty"
        android:layout_width="130dp"
        android:layout_height="95dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:text="Choose Difficulty"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_inputname" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="248dp"
        android:layout_height="30dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="36dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>